[package]
name = "rs_limitless"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "cryptocurrency", "web3"]
keywords = ["limitless", "prediction-markets", "exchange", "eip712", "clob"]
description = "Limitless Exchange API bindings in Rust — prediction market trading, HMAC authentication, EIP-712 signing, and WebSocket streams."
repository = "https://github.com/unkuseni/rs_limitless"
homepage = "https://limitless.exchange"
documentation = "https://docs.rs/rs_limitless"
authors = ["unkuseni <twitter.com/unkuseni>"]
rust-version = "1.70"
exclude = ["tests/*", "examples/*"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "limitless"
path = "src/lib.rs"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
serde_json = "1.0.128"
itertools = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
hex = "0.4.3"
hmac = "0.13.0"
openssl = "0.10.72"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-tungstenite = { features = ["native-tls"], version = "0.29.0" }
tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.22.1"
url = "2.5.0"
sha2 = "0.11.0"
sha3 = "0.10.8"
k256 = { version = "0.13", features = ["ecdsa"] }
once_cell = "1.19.0"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.10.1"
futures = "0.3.25"
thiserror = "2.0.18"
log = "0.4.27"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
